[package]
authors = ["Tom S (tombl) <tom@tombl.dev>"]
name = "picorne"
edition = "2018"
version = "0.1.0"

[dependencies]
cortex-m-rtic = "1"
rp-pico = "0.3.0"
cortex-m = "0.7.4"
keyberon = { git = "https://github.com/TeXitoi/keyberon.git", rev = "a94f2392" }
embedded-time = "0.12.1"
embedded-hal = "0.2.7"
usb-device = "0.2.8"
usbd-serial = "0.1.1"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = "s"
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
opt-level = "s"
overflow-checks = false
